# khulnasoft-lab-_-khulnasofttest

./: .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  WORKSPACE  khulnasofttest_deps.bzl
.github/ISSUE_TEMPLATE/: 00-bug_report.yml  config.yml
ci/: linux-presubmit.sh  macos-presubmit.sh  windows-presubmit.bat
docs/: _config.yml  advanced.md  community_created_documentation.md  faq.md  index.md  kmock_cheat_sheet.md  kmock_cook_book.md  kmock_faq.md  kmock_for_dummies.md  pkgconfig.md  platforms.md  primer.md  quickstart-bazel.md  quickstart-cmake.md  samples.md
docs/_data/: navigation.yml
docs/_layouts/: default.html
docs/_sass/: main.scss
docs/reference/: actions.md  assertions.md  matchers.md  mocking.md  testing.md
khulnasoftmock/: CMakeLists.txt  README.md
khulnasoftmock/cmake/: kmock.pc.in  kmock_main.pc.in
khulnasoftmock/include/kmock/: kmock-actions.h  kmock-cardinalities.h  kmock-function-mocker.h  kmock-matchers.h  kmock-more-actions.h  kmock-more-matchers.h  kmock-nice-strict.h  kmock-spec-builders.h  kmock.h
khulnasoftmock/include/kmock/internal/: kmock-internal-utils.h  kmock-port.h  kmock-pp.h
khulnasoftmock/include/kmock/internal/custom/: README.md  kmock-generated-actions.h  kmock-matchers.h  kmock-port.h
khulnasoftmock/src/: kmock-all.cc  kmock-cardinalities.cc  kmock-internal-utils.cc  kmock-matchers.cc  kmock-spec-builders.cc  kmock.cc  kmock_main.cc
khulnasoftmock/test/: BUILD.bazel  kmock-actions_test.cc  kmock-cardinalities_test.cc  kmock-function-mocker_test.cc  kmock-internal-utils_test.cc  kmock-matchers-arithmetic_test.cc  kmock-matchers-comparisons_test.cc  kmock-matchers-containers_test.cc  kmock-matchers-misc_test.cc  kmock-matchers_test.h  kmock-more-actions_test.cc  kmock-nice-strict_test.cc  kmock-port_test.cc  kmock-pp-string_test.cc  kmock-pp_test.cc  kmock-spec-builders_test.cc  kmock_all_test.cc  kmock_ex_test.cc  kmock_leak_test.py  kmock_leak_test_.cc  kmock_link2_test.cc  kmock_link_test.cc  kmock_link_test.h  kmock_output_test.py  kmock_output_test_.cc  kmock_output_test_golden.txt  kmock_stress_test.cc  kmock_test.cc  kmock_test_utils.py
khulnasofttest/: CMakeLists.txt  README.md
khulnasofttest/cmake/: Config.cmake.in  gtest_main.pc.in  internal_utils.cmake  ktest.pc.in  libgtest.la.in
khulnasofttest/docs/: README.md
khulnasofttest/include/ktest/: ktest-assertion-result.h  ktest-death-test.h  ktest-matchers.h  ktest-message.h  ktest-param-test.h  ktest-printers.h  ktest-spi.h  ktest-test-part.h  ktest-typed-test.h  ktest.h  ktest_pred_impl.h  ktest_prod.h
khulnasofttest/include/ktest/internal/: ktest-death-test-internal.h  ktest-filepath.h  ktest-internal.h  ktest-param-util.h  ktest-port-arch.h  ktest-port.h  ktest-string.h  ktest-type-util.h
khulnasofttest/include/ktest/internal/custom/: README.md  ktest-port.h  ktest-printers.h  ktest.h
khulnasofttest/samples/: prime_tables.h  sample1.cc  sample1.h  sample10_unittest.cc  sample1_unittest.cc  sample2.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample4.cc  sample4.h  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
khulnasofttest/src/: ktest-all.cc  ktest-assertion-result.cc  ktest-death-test.cc  ktest-filepath.cc  ktest-internal-inl.h  ktest-matchers.cc  ktest-port.cc  ktest-printers.cc  ktest-test-part.cc  ktest-typed-test.cc  ktest.cc  ktest_main.cc
khulnasofttest/test/: BUILD.bazel  khulnasoftletest-uninitialized-test.py  khulnasofttest-break-on-failure-unittest.py  khulnasofttest-break-on-failure-unittest_.cc  khulnasofttest-catch-exceptions-test.py  khulnasofttest-catch-exceptions-test_.cc  khulnasofttest-color-test.py  khulnasofttest-color-test_.cc  khulnasofttest-death-test-test.cc  khulnasofttest-death-test_ex_test.cc  khulnasofttest-env-var-test.py  khulnasofttest-env-var-test_.cc  khulnasofttest-failfast-unittest.py  khulnasofttest-failfast-unittest_.cc  khulnasofttest-filepath-test.cc  khulnasofttest-filter-unittest.py  khulnasofttest-filter-unittest_.cc  khulnasofttest-global-environment-unittest.py  khulnasofttest-global-environment-unittest_.cc  khulnasofttest-json-outfiles-test.py  khulnasofttest-json-output-unittest.py  khulnasofttest-list-tests-unittest.py  khulnasofttest-list-tests-unittest_.cc  khulnasofttest-listener-test.cc  khulnasofttest-message-test.cc  khulnasofttest-options-test.cc  khulnasofttest-output-test-golden-lin.txt  khulnasofttest-output-test.py  khulnasofttest-output-test_.cc  khulnasofttest-param-test-invalid-name1-test.py  khulnasofttest-param-test-invalid-name1-test_.cc  khulnasofttest-param-test-invalid-name2-test.py  khulnasofttest-param-test-invalid-name2-test_.cc  khulnasofttest-param-test-test.cc  khulnasofttest-param-test-test.h  khulnasofttest-param-test2-test.cc  khulnasofttest-port-test.cc  khulnasofttest-printers-test.cc  khulnasofttest-setuptestsuite-test.py  khulnasofttest-setuptestsuite-test_.cc  (+45 more)
