# Copyright 2017 Khulnasoft Inc.
# All Rights Reserved.
#
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are
# met:
#
#     * Redistributions of source code must retain the above copyright
# notice, this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above
# copyright notice, this list of conditions and the following disclaimer
# in the documentation and/or other materials provided with the
# distribution.
#     * Neither the name of Khulnasoft Inc. nor the names of its
# contributors may be used to endorse or promote products derived from
# this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
# LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
# A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
# OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
# LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
# DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
# THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
#
#   Bazel Build for Khulnasoft C++ Testing Framework(Khulnasoft Test)-khulnasoftmock

load("@rules_python//python:defs.bzl", "py_library", "py_test")

licenses(["notice"])

# Tests for KMock itself
cc_test(
    name = "kmock_all_test",
    size = "small",
    srcs = glob(include = ["kmock-*.cc"]) + ["kmock-matchers_test.h"],
    linkopts = select({
        "//:qnx": [],
        "//:windows": [],
        "//conditions:default": ["-pthread"],
    }),
    deps = ["//:ktest"],
)

# Python tests
py_library(
    name = "kmock_test_utils",
    testonly = 1,
    srcs = ["kmock_test_utils.py"],
    deps = [
        "//khulnasofttest/test:ktest_test_utils",
    ],
)

cc_binary(
    name = "kmock_leak_test_",
    testonly = 1,
    srcs = ["kmock_leak_test_.cc"],
    deps = ["//:ktest_main"],
)

py_test(
    name = "kmock_leak_test",
    size = "medium",
    srcs = ["kmock_leak_test.py"],
    data = [
        ":kmock_leak_test_",
        ":kmock_test_utils",
    ],
    tags = [
        "no_test_msvc2015",
        "no_test_msvc2017",
    ],
)

cc_test(
    name = "kmock_link_test",
    size = "small",
    srcs = [
        "kmock_link2_test.cc",
        "kmock_link_test.cc",
        "kmock_link_test.h",
    ],
    deps = ["//:ktest_main"],
)

cc_binary(
    name = "kmock_output_test_",
    srcs = ["kmock_output_test_.cc"],
    deps = ["//:ktest"],
)

py_test(
    name = "kmock_output_test",
    size = "medium",
    srcs = ["kmock_output_test.py"],
    data = [
        ":kmock_output_test_",
        ":kmock_output_test_golden.txt",
    ],
    tags = [
        "no_test_msvc2015",
        "no_test_msvc2017",
    ],
    deps = [":kmock_test_utils"],
)

cc_test(
    name = "kmock_test",
    size = "small",
    srcs = ["kmock_test.cc"],
    deps = ["//:ktest_main"],
)
